# motra

./: .gitignore  2022-06-10_1_UL.water-vapor.csv  CONTRIBUTING.md  Combine Quadrants Test.ipynb  Example-Analysis.ipynb  README.md  Untitled.ipynb  example.ipynb  proposed-video-file-naming-schema.md  pyproject.toml  simple-analysis.ipynb
.ipynb_checkpoints/: Combine Quadrants Test-checkpoint.ipynb  Example-Analysis-checkpoint.ipynb  simple-analysis-checkpoint.ipynb
assets/: 2022-06-06_UL.water-vapor_wild-type-vF_LR.water-vapor_wild-type_vM.csv  2022-06-06_UL.water-vapor_wild-type-vF_LR2.water-vapor_wild-type_vM copy.csv
examples/: jun7.ipynb  parse-blend-file-scratch.ipynb  simple-analysis.ipynb
help/: for-the-analysts.md
motra/: __init__.py  arena.py  config.py  constants.py  motra_model.py  parse.py  quadrant_model.py  smallestenclosingcircle.py  stats.py  trajectory.py  util.py  visualization.py
