[tool.poetry]
name = "motra"
version = "0.1.0"
description = "A library for analyzing the motion paths of Drosophila"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
jupyterlab = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
