[tool.poetry]
name = "motra"
version = "0.1.0"
description = "A library for analyzing the motion paths of Drosophila"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
pandas = "1.5.3"
seaborn = "^0.12.2"
numpy = ">=1.18,<1.24"
sleap-io = {version = "^0.0.2", optional = true}


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.2"
chardet = "^5.1.0"

[tool.poetry.extras]
sleap = ["sleap-io"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
